[gd_scene load_steps=21 format=2]

[ext_resource path="res://bonus01/animal/enemy.png" type="Texture" id=1]
[ext_resource path="res://bonus01/animal/enemy.gd" type="Script" id=2]
[ext_resource path="res://bonus01/animal/16.png" type="Texture" id=3]
[ext_resource path="res://bonus01/audio/01_Explosion_v1.wav" type="AudioStream" id=4]

[sub_resource type="Shader" id=15]
code = "shader_type canvas_item;

uniform float amplitude : hint_range(0, 10); // Амплитуда колебаний флага
uniform float frequency : hint_range(0, 5); // Частота колебаний флага

void vertex() {
    // Изменение позиций вершин на основе времени и параметров амплитуды и частоты
    VERTEX.y += sin(TIME * frequency) * amplitude;
	VERTEX.x += cos(TIME * frequency) * amplitude;
}"

[sub_resource type="ShaderMaterial" id=16]
shader = SubResource( 15 )
shader_param/amplitude = 4.673
shader_param/frequency = 3.411

[sub_resource type="CircleShape2D" id=1]
radius = 16.0

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 128, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 160, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=10]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 32, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=11]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 64, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=12]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 96, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=13]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 128, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=14]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 160, 32, 32, 32 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ) ],
"loop": false,
"name": "play",
"speed": 5.0
} ]

[node name="enemy" type="KinematicBody2D"]
scale = Vector2( 2.12, 2.12 )
collision_layer = 2
collision_mask = 4
script = ExtResource( 2 )

[node name="Enemy" type="Sprite" parent="."]
material = SubResource( 16 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="RayCastLeft" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( -25, 0 )
collision_mask = 4

[node name="RayCastRight" type="RayCast2D" parent="."]
position = Vector2( -3, 0 )
enabled = true
cast_to = Vector2( 28, 0 )
collision_mask = 4

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
visible = false
position = Vector2( 9.53674e-07, -1.90735e-06 )
scale = Vector2( 1.62146, 1.62146 )
frames = SubResource( 2 )
animation = "play"
frame = 3

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )

[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
